# extractor-benchmark

./: CMakeLists.txt
benchmark/: CMakeLists.txt  cape_benchmark.cpp  config.h.in  deplex_benchmark.cpp  peac_benchmark.cpp
data/icl/living_room/: cape.ini  deplex.ini  peac.ini
data/tum/long_office/: cape.ini  deplex.ini  peac.ini
libs/: CMakeLists.txt
libs/CAPE/: CAPE.cpp  CMakeLists.txt
libs/PEAC/: CMakeLists.txt
python/metrics/: _TMP_PEAC_CLOUD.pcd  metric_estimation.ipynb
python/metrics/.ipynb_checkpoints/: metric_estimation-checkpoint.ipynb
python/metrics/data/: calib_params.xml
python/metrics/icl_living/cape_coarse_icl/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
python/metrics/icl_living/cape_ref_icl/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
python/metrics/icl_living/deplex_icl/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
python/metrics/icl_living/peac_coarse_icl/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
python/metrics/icl_living/peac_ref_icl/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
python/metrics/tum_long_office/cape_coarse_tum/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy
python/metrics/tum_long_office/cape_ref_tum/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
python/metrics/tum_long_office/deplex_tum/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
python/metrics/tum_long_office/peac_coarse_tum/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy
python/metrics/tum_long_office/peac_ref_tum/: fScore.npy  mean.npy  missed.npy  noise.npy  osr.npy  panoptic.npy  precision.npy  recall.npy  usr.npy
src/: CMakeLists.txt
src/deplex/: image_processor.cpp
tools/: benchmark.sh  fps_graph.py
